--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   profiles:
-    active: local
+    active:
+    #local
   jackson:
     date-format: yyyy-MM-dd HH-mm:ss
     time-zone: GMT+8
