--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,15 +2,14 @@
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource #Druid连接池
-    url: jdbc:mysql:localhost:3306/
-    # jdbc:mysql://192.168.51.190:3306/cspt?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://localhost:3306/crawler?useCharactorEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root #数据库用户名
     password: 123456 #数据库密码
 #    url: jdbc:mysql://127.0.0.1:3306/cspt?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=true&autoReconnect=true&failOverReadOnly=false
 #    username: root #数据库用户名
 #    password: 123456 #数据库密码
 
-    driver-class-name: com.mysql.jdbc.Driver #mysql驱动
+    driver-class-name: com.mysql.cj.jdbc.Driver #mysql驱动  com.mysql.cj.jdbc.Driver com.mysql.jdbc.Driver
     initialSize: 10 #初始化连接池大小
     minIdle: 10 #初始化最小连接池数量
     maxActive: 100 #初始化最大连接池数量
@@ -19,3 +18,10 @@ spring:
     minEvictableIdleTimeMillis: 300000 #配置一个连接在池中最小生存的时间，单位是毫秒
     validationQuery: SELECT 'x' #测试连接
 
+
+  data:
+    elasticsearch:
+      cluster-nodes: 120.78.3.7:9300
+      cluster-name: elasticsearch
+      repositories:
+        enabled: true
