--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.edu.hfut.dmic.webcollector</groupId>
+            <artifactId>WebCollector</artifactId>
+            <version>2.72-beta</version>
+        </dependency>
+
     </dependencies>
 
     <build>
